--- a/next.js/hello-world/nextjs-blog/package.json
+++ b/next.js/hello-world/nextjs-blog/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "yarn": "^1.22.19"
   }
 }
