--- a/01-vue/01-base-demo/base-demo/package.json
+++ b/01-vue/01-base-demo/base-demo/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "element-plus": "^2.2.22",
+    "element-ui": "^2.15.12",
     "js-cookie": "^3.0.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
