--- a/01-vue/01-base-demo/base-demo/package.json
+++ b/01-vue/01-base-demo/base-demo/package.json
@@ -11,11 +11,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.2.22",
     "element-ui": "^2.15.12",
     "js-cookie": "^3.0.1",
+    "marked": "^4.2.3",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -27,11 +30,14 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.1.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
