--- a/01-vue/01-base-demo/base-demo/package.json
+++ b/01-vue/01-base-demo/base-demo/package.json
@@ -8,7 +8,8 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "docker-build": "docker build -t memo-web ."
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
